--- a/index.html
+++ b/index.html
@@ -190,3 +190,14 @@
 
 </body>
 </html>
+<form id="businessForm">
+  <label for="situation">Describe your business situation:</label><br>
+  <textarea id="situation" name="situation" rows="3" required></textarea><br><br>
+
+  <label for="struggles">What are you struggling with?</label><br>
+  <textarea id="struggles" name="struggles" rows="3" required></textarea><br><br>
+
+  <button type="submit">Get Advice</button>
+</form>
+
+<div id="response" style="margin-top:20px; white-space: pre-wrap;"></div>
