--- a/index.html
+++ b/index.html
@@ -2,222 +2,243 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AI Consulting Assistant</title>
-
-  <!-- Google Font for a clean, modern look -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Business Advisor</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-
   <style>
-    :root {
-      --primary: #6366f1;
-      --background: #f9fafb;
-      --text: #111827;
-      --muted: #6b7280;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Inter', sans-serif;
-      background: var(--background);
-      color: var(--text);
-      line-height: 1.7;
+      background: #f9fafc;
+      color: #1a1a1a;
+      line-height: 1.6;
     }
-
     header {
-      padding: 4rem 1rem 2rem;
-      text-align: center;
-      max-width: 800px;
-      margin: auto;
+      position: sticky;
+      top: 0;
+      background: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(8px);
+      border-bottom: 1px solid #eee;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 100;
     }
-
     header h1 {
-      font-size: 2.75rem;
       font-weight: 700;
-      color: var(--primary);
-      margin-bottom: 1rem;
+      font-size: 1.5rem;
+      color: #0070f3;
     }
-
-    header p {
-      font-size: 1.2rem;
-      color: var(--muted);
-      max-width: 600px;
-      margin: auto;
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem 1rem;
     }
-
+    .hero {
+      text-align: center;
+      margin-bottom: 2.5rem;
+    }
+    .hero h2 {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #222;
+    }
+    .hero p {
+      font-size: 1.1rem;
+      color: #555;
+      margin-top: 0.5rem;
+    }
     .features {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
       gap: 1rem;
-      margin: 3rem auto;
-      max-width: 900px;
-      padding: 1rem;
+      margin: 2rem 0;
+      flex-wrap: wrap;
     }
-
     .features div {
-      background: white;
-      padding: 1.5rem;
+      flex: 1 1 30%;
+      background: #ffffff;
+      padding: 1rem;
       border-radius: 10px;
-      flex: 1 1 250px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
       text-align: center;
       font-weight: 600;
-      color: var(--primary);
+      color: #004db3;
     }
-
     form {
       background: white;
-      max-width: 600px;
-      margin: 3rem auto;
       padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.08);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
     }
-
-    form label {
+    section {
+      margin-bottom: 2rem;
+    }
+    label {
       display: block;
+      margin-bottom: 0.4rem;
       font-weight: 600;
-      margin-bottom: 0.5rem;
-      color: var(--text);
     }
-
-    form input, form textarea {
+    input, textarea, select {
       width: 100%;
-      padding: 0.75rem;
-      border: 1.5px solid #ddd;
+      padding: 0.65rem;
+      margin-bottom: 1.2rem;
+      border: 1.5px solid #ccc;
       border-radius: 6px;
-      margin-bottom: 1.5rem;
       font-size: 1rem;
     }
-
-    form button {
-      background: var(--primary);
+    .choices {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+    }
+    .choice {
+      flex: 1 1 45%;
+      background: #f0f4ff;
+      border: 2px solid transparent;
+      padding: 0.75rem;
+      text-align: center;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+    .choice:hover, .choice.selected {
+      border-color: #0070f3;
+      background: #e4eeff;
+    }
+    button {
+      background-color: #0070f3;
       color: white;
-      font-size: 1.1rem;
-      padding: 0.9rem 1.5rem;
       border: none;
+      padding: 0.8rem 1.5rem;
+      font-size: 1.1rem;
+      font-weight: 700;
       border-radius: 8px;
       cursor: pointer;
       width: 100%;
-      font-weight: 600;
-      transition: background 0.3s;
     }
-
-    form button:hover {
-      background: #4f46e5;
+    button:hover {
+      background-color: #005bb5;
     }
-
     #advice {
-      max-width: 700px;
-      margin: 2rem auto;
-      background: #eef2ff;
-      border-left: 4px solid var(--primary);
-      padding: 1.5rem;
-      border-radius: 8px;
-      font-size: 1rem;
-      color: #1e3a8a;
       display: none;
+      margin-top: 2rem;
+      background: #f4f8ff;
+      padding: 1.5rem;
+      border-left: 4px solid #0070f3;
+      border-radius: 8px;
       white-space: pre-wrap;
+      color: #003a8c;
+      font-weight: 500;
     }
-
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      font-size: 0.9rem;
-      color: var(--muted);
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-
-      .features {
-        flex-direction: column;
-      }
+    #loading {
+      display: none;
+      font-style: italic;
+      color: #666;
+      margin-top: 1rem;
     }
   </style>
 </head>
-
 <body>
-
   <header>
-    <h1>AI Consulting Assistant</h1>
-    <p>
-      Instantly get tailored business advice using AI. Perfect for startups and small businesses looking to grow smarter, faster.
-    </p>
+    <h1>AI Business Advisor</h1>
   </header>
 
-  <section class="features">
-    <div>⚡ &nbsp; Under 60 seconds</div>
-    <div>🔐 &nbsp; Secure & Private</div>
-    <div>🧠 &nbsp; AI-Powered</div>
-    <div>💸 &nbsp; Free During Beta</div>
-  </section>
+  <main>
+    <div class="hero">
+      <h2>Business insights in under 60 seconds</h2>
+      <p>Instant, private, AI-driven advice for small businesses — free while we test!</p>
+    </div>
 
-  <form id="consultForm" autocomplete="off" spellcheck="false">
-    <label for="industry">Industry</label>
-    <input type="text" id="industry" placeholder="e.g. Tech, Retail" required />
+    <div class="features">
+      <div>⚡ Under 60 seconds</div>
+      <div>🔒 Secure & Private</div>
+      <div>💸 Free during testing</div>
+    </div>
 
-    <label for="size">Business Size</label>
-    <input type="text" id="size" placeholder="e.g. 10 employees" required />
+    <form id="consultForm">
+      <section>
+        <h3>1. Tell us about your business</h3>
+        <label for="bizName">Business Name</label>
+        <input type="text" id="bizName" required />
 
-    <label for="goals">Your Goals</label>
-    <input type="text" id="goals" placeholder="e.g. Increase sales" required />
+        <label for="industry">Industry</label>
+        <input type="text" id="industry" required />
 
-    <label for="struggles">What are you struggling with?</label>
-    <textarea id="struggles" rows="4" placeholder="e.g. Marketing, hiring, operations" required></textarea>
+        <label for="size">Business Size</label>
+        <div class="choices" id="sizeChoices">
+          <div class="choice" data-value="Solo">Solo</div>
+          <div class="choice" data-value="Small Team">Small Team</div>
+          <div class="choice" data-value="Growing Business">Growing Business</div>
+          <div class="choice" data-value="Established">Established</div>
+        </div>
+      </section>
 
-    <button type="submit">Get AI Advice</button>
-  </form>
+      <section>
+        <h3>2. Goals and Struggles</h3>
+        <label for="goals">Goals (Select up to 3)</label>
+        <select id="goals" multiple size="5">
+          <option value="Increase sales">Increase sales</option>
+          <option value="Grow brand">Grow brand</option>
+          <option value="Hire better">Hire better</option>
+          <option value="Improve operations">Improve operations</option>
+          <option value="Launch new product">Launch new product</option>
+        </select>
 
-  <div id="advice"></div>
+        <label for="struggles">Current Challenges</label>
+        <textarea id="struggles" rows="4" placeholder="E.g. Marketing, hiring, cashflow..." required></textarea>
+      </section>
 
-  <footer>
-    &copy; 2025 AI Consulting Assistant. Built for entrepreneurs and dreamers.
-  </footer>
+      <button type="submit">Get My AI Advice</button>
+      <div id="loading">Thinking... Please wait.</div>
+    </form>
+
+    <div id="advice"></div>
+  </main>
 
   <script>
+    let selectedSize = '';
+    document.querySelectorAll('.choice').forEach(choice => {
+      choice.addEventListener('click', () => {
+        document.querySelectorAll('.choice').forEach(c => c.classList.remove('selected'));
+        choice.classList.add('selected');
+        selectedSize = choice.dataset.value;
+      });
+    });
+
     document.getElementById('consultForm').addEventListener('submit', async function(e) {
       e.preventDefault();
-
+      const name = document.getElementById('bizName').value.trim();
       const industry = document.getElementById('industry').value.trim();
-      const size = document.getElementById('size').value.trim();
-      const goals = document.getElementById('goals').value.trim();
       const struggles = document.getElementById('struggles').value.trim();
+      const goals = Array.from(document.getElementById('goals').selectedOptions).map(o => o.value);
 
+      if (!selectedSize) return alert("Please select a business size.");
+
+      const loading = document.getElementById('loading');
       const adviceDiv = document.getElementById('advice');
+      loading.style.display = 'block';
+      adviceDiv.style.display = 'none';
+
+      const response = await fetch('https://https://eo6poy42m0zbb4f.m.pipedream.net', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          bizName: name,
+          industry,
+          size: selectedSize,
+          goals,
+          struggles
+        })
+      });
+
+      const data = await response.json();
+      adviceDiv.textContent = data.advice || "Sorry, something went wrong.";
       adviceDiv.style.display = 'block';
-      adviceDiv.textContent = 'Thinking...';
-
-      try {
-        const response = await fetch('https://https://eo6poy42m0zbb4f.m.pipedream.net', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({
-            industry,
-            size,
-            goals,
-            struggles
-          })
-        });
-
-        const data = await response.json();
-        adviceDiv.textContent = data.advice || data.result || 'Sorry, no advice returned.';
-      } catch (error) {
-        adviceDiv.textContent = 'Something went wrong. Please try again later.';
-        console.error(error);
-      }
+      loading.style.display = 'none';
     });
   </script>
-
 </body>
 </html>
