--- a/index.html
+++ b/index.html
@@ -1,149 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ConsultAI - Smart Business Advisor</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>ConsultAI</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
-    }
-
     body {
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #fff;
+      margin: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background: #0f0f0f;
+      color: white;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       height: 100vh;
-      padding: 20px;
     }
 
     h1 {
-      font-size: 2.8rem;
+      font-size: 2.5rem;
       margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1.1rem;
-      margin-bottom: 30px;
-      text-align: center;
-      max-width: 700px;
+      background: linear-gradient(90deg, #8ef6e4, #9896f1);
+      -webkit-background-clip: text;
+      color: transparent;
     }
 
     form {
-      background-color: rgba(255, 255, 255, 0.08);
-      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      width: 90%;
+      max-width: 500px;
+      background: rgba(255, 255, 255, 0.05);
       padding: 30px;
-      width: 100%;
-      max-width: 600px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(20px);
+      border-radius: 20px;
+      backdrop-filter: blur(15px);
     }
 
-    label {
-      display: block;
-      margin-bottom: 8px;
-      font-weight: 600;
-    }
-
-    input,
-    select,
-    textarea {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 20px;
-      border: none;
-      border-radius: 12px;
+    textarea, input, select {
+      padding: 10px;
       font-size: 1rem;
-    }
-
-    select[multiple] {
-      height: 120px;
+      border-radius: 10px;
+      border: none;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
     }
 
     button {
-      width: 100%;
-      padding: 14px;
-      background: #00c6ff;
-      background: linear-gradient(to right, #0072ff, #00c6ff);
-      color: white;
-      border: none;
-      border-radius: 14px;
-      font-size: 1.1rem;
+      padding: 12px;
+      background: linear-gradient(90deg, #8ef6e4, #9896f1);
+      color: black;
       font-weight: bold;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
-      transition: background 0.3s;
     }
 
-    button:hover {
-      background: linear-gradient(to right, #005bea, #00c6ff);
-    }
-
-    .response {
-      margin-top: 25px;
+    #output {
+      margin-top: 30px;
       padding: 20px;
-      background-color: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 15px;
-      backdrop-filter: blur(12px);
+      max-width: 600px;
+      width: 90%;
+      white-space: pre-wrap;
     }
   </style>
 </head>
-
 <body>
   <h1>ConsultAI</h1>
-  <p>Your AI-powered business advisor — get personalised strategic advice in seconds.</p>
-
-  <form id="consultForm">
-    <label for="industry">Industry</label>
-    <input type="text" id="industry" name="industry" required />
-
-    <label for="size">Business Size</label>
-    <select id="size" name="size" required>
-      <option value="">Select...</option>
-      <option value="Solo entrepreneur">Solo entrepreneur</option>
-      <option value="Small team (2–10)">Small team (2–10)</option>
-      <option value="Medium-sized business (11–50)">Medium-sized business (11–50)</option>
-      <option value="Large business (50+)">Large business (50+)</option>
-    </select>
-
-    <label for="goals">Goals (select multiple if needed)</label>
-    <select id="goals" name="goals" multiple required>
-      <option value="Grow customer base">Grow customer base</option>
-      <option value="Improve marketing">Improve marketing</option>
-      <option value="Increase revenue">Increase revenue</option>
-      <option value="Reduce costs">Reduce costs</option>
-      <option value="Expand to new markets">Expand to new markets</option>
-      <option value="Streamline operations">Streamline operations</option>
-    </select>
-
-    <label for="struggles">Biggest Challenges</label>
-    <textarea id="struggles" name="struggles" rows="4" required></textarea>
-
+  <form id="aiForm">
+    <label>
+      Your Business Situation:
+      <textarea name="situation" rows="4" required></textarea>
+    </label>
+    <label>
+      Your Struggles:
+      <textarea name="struggles" rows="4" required></textarea>
+    </label>
     <button type="submit">Get Advice</button>
   </form>
 
-  <div class="response" id="advice"></div>
+  <div id="output"></div>
 
   <script>
-    const form = document.getElementById("consultForm");
-    const adviceDiv = document.getElementById("advice");
-
-    form.addEventListener("submit", async (e) => {
+    document.getElementById("aiForm").addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      const industry = document.getElementById("industry").value;
-      const size = document.getElementById("size").value;
-      const goals = Array.from(document.getElementById("goals").selectedOptions).map(option => option.value);
-      const struggles = document.getElementById("struggles").value;
-
-      adviceDiv.textContent = "Thinking...";
+      const situation = e.target.situation.value;
+      const struggles = e.target.struggles.value;
+      const output = document.getElementById("output");
+      output.textContent = "Thinking...";
 
       try {
         const response = await fetch("https://eo4ph2vzs474xw2.m.pipedream.net", {
@@ -151,17 +98,23 @@
           headers: {
             "Content-Type": "application/json"
           },
-          body: JSON.stringify({ industry, size, goals, struggles })
+          body: JSON.stringify({ situation, struggles })
         });
 
         const data = await response.json();
-        adviceDiv.textContent = data.advice || "Sorry, I couldn't fetch the advice.";
+        
+        if (data.advice) {
+          output.textContent = data.advice;
+        } else {
+          output.textContent = "⚠️ The assistant did not return any advice.";
+          console.log("Returned data:", data);
+        }
+
       } catch (error) {
+        output.textContent = "❌ There was a problem connecting to the AI assistant.";
         console.error(error);
-        adviceDiv.textContent = "There was a problem connecting to the AI assistant.";
       }
     });
   </script>
 </body>
-
 </html>
